Update to 1.19.4