@@ -30,9 +30,8 @@ public class ImageCloneExtension<T extends ImageCloningRecipe> implements ICraft
 
         ItemStack out = image.copy();
 
-        //TODO Fix
-        craftingGridHelper.setInputs(builder, VanillaTypes.ITEM_STACK, Arrays.asList(List.of(image), paper), 0, 0);
-        craftingGridHelper.setOutputs(builder, VanillaTypes.ITEM_STACK, List.of(out));
+        craftingGridHelper.createAndSetInputs(builder, VanillaTypes.ITEM_STACK, Arrays.asList(List.of(image), paper), 0, 0);
+        craftingGridHelper.createAndSetOutputs(builder, VanillaTypes.ITEM_STACK, List.of(out));
     }
 
 }
